<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:background="@color/black"
    android:layout_height="match_parent"
    tools:context=".MenuActivity">
<ScrollView
  android:layout_width="match_parent"
  android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  android:orientation="vertical">


  <TextView
      android:id="@+id/textView5"
      android:layout_width="115dp"
      android:layout_height="33dp"
      android:layout_marginStart="36dp"
      android:layout_marginTop="16dp"
      android:textColor="@color/aquamarine"
      android:text="@string/text3"
      android:textAlignment="center"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toTopOf="parent" />

  <ImageView
      android:id="@+id/imageView2"
      android:layout_width="26dp"
      android:layout_height="21dp"
      android:layout_marginStart="39dp"
      android:layout_marginTop="10dp"
      android:contentDescription="@string/text4"
      android:src="@drawable/sneakers"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
      android:id="@+id/textView6"
      android:layout_width="79dp"
      android:layout_height="wrap_content"
      android:layout_marginTop="17dp"
      android:text="@string/text6"
      android:textSize="10sp"
      app:layout_constraintStart_toEndOf="@+id/imageView2"
      app:layout_constraintTop_toBottomOf="@+id/textView5" />

  <TextView
      android:id="@+id/textView7"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:layout_marginStart="16dp"
      android:layout_marginTop="9dp"
      android:text="@string/text7"
      android:textColor="@color/aquamarine"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView6" />

  <TextView
      android:id="@+id/textView8"
      android:layout_width="153dp"
      android:layout_height="132dp"
      android:layout_marginStart="16dp"
      android:layout_marginTop="10dp"
      android:layout_marginEnd="16dp"
      android:text="@string/text8"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView7" />

  <Button
      android:id="@+id/button3"
      android:layout_width="85dp"
      android:layout_height="28dp"
      android:layout_marginStart="48dp"
      android:layout_marginTop="36dp"
      android:onClick="mainmenu"
      android:background="@color/aquamarine"
      android:text="@string/btn3"
      android:textSize="8sp"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/textView8"
      tools:ignore="TouchTargetSizeCheck,TextContrastCheck" />
</LinearLayout>
</ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>